project2/spl-spec/my_test/test_11811719_6.out
in def var
varb map:
var map end
def struct
start field list.
generate field list.
non-empty structure
get field list from node
success get name from declist
************
next
TYPE
prim/array type list node
Generate a prim type
next
add a field list complete
field list size:
1
0x55685fe53950
def complete, then cal hash
cal field list hash
0x55685fe53990
3
struct def complete
struct map:
name:
run
run
struct:
next
prim
0

struct map end.
adding argument
adding argument to map
adding argument to map
in def var
varb map:
next
0
pa_end
0
pa_start
0
var map end
Error type 1 at Line 7: variable is used without a definition.
cheking rvalue
Error type 5 at Line 7: the type of the operands at both sides of assignment operator should match.
start defFun
param and return total size
3
start check return
2
3
stmtList childNum
0
stack size
0
