project2/spl-spec/my_test/test_11811719_6.spl
struct run {
  int next;
};
int freerange(int pa_start, int pa_end)
{
  char p;
  p=run;
}
